# claude-pdf2md-ocr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
claude_pdf2md_ocr/: __init__.py  cli.py  enricher.py  inject.py  pipeline.py  spellcheck.py
claude_pdf2md_ocr/backends/: __init__.py  tesseract.py
tests/: test_smoke.py  test_spellcheck.py
